Fix heading alignment

--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body {
     display:flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    text-align: center;
     padding:0 10vw;
 }
 
